--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
    <head>
       <meta charset = "utf-8">
       <meta name = "viewport" content = "width=device-width, initial-scale = 1">
-      <link rel = "stylesheet" 
-         href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
       <style>
          body {
              background:black;
@@ -15,7 +18,7 @@
       <div class = "container">
       
          <div class = "jumbotron">
-            <h1>Tutorials point</h1> 
+            <h1><i class="fas fa-cloud"></i>Tutorials point</h1> 
             <p>
                Tutorials Point originated from the idea that there exists a class 
                of readers who respond better to online content and prefer to learn 
