--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    
       <div class = "container">
       
-         <div class = "jumbotron">
+         <div class = "jumbotron bg-dark">
             <h1><i class="fas fa-cloud"></i>Tutorials point</h1> 
             <p>
                Tutorials Point originated from the idea that there exists a class 
