--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <style>
          body {
              background:black;
-            color:green;
+            color:#0c0;
          }
       </style>
    </head>
