--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <br/>
       <div class = "container">
       
-         <div class = "jumbotron bg-dark">
+         <div class = "jumbotron">
             <h1><i class="fas fa-cloud"></i>Tutorials point</h1> 
             <p>
                Tutorials Point originated from the idea that there exists a class 
