--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </style>
    </head>
    <body>
-     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+     <nav class="navbar navbar-expand-md bg-dark navbar-dark text-green">
   <!-- Brand -->
   <a class="navbar-brand" href="#">C.John_</a>
 
@@ -42,7 +42,7 @@
       <br/>
       <div class = "container">
       
-         <div class = "jumbotron">
+         <div class = "jumbotron bg-dark">
             <h1><i class="fas fa-cloud"></i>Tutorials point</h1> 
             <p>
                Tutorials Point originated from the idea that there exists a class 
