--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
              background:black;
             color:#0c0;
          }
+
+@font-face {
+  font-family: myFirstFont;
+  src: url(/font/font1.ttf);
+  font-weight: bold;
+}
       </style>
    </head>
    <body>
