--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </style>
    </head>
    <body>
-     <nav class="navbar navbar-expand-md bg-dark navbar-dark text-green">
+     <nav class="navbar navbar-expand-md bg-dark navbar-dark text-green" style="color:#0c0; >
   <!-- Brand -->
   <a class="navbar-brand" style="color:#0c0;" href="#">C.John_</a>
 
