--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       <br/>
       
          <div class = "jumbotron bg-dark">
-            <h1><i class="fas fa-cloud"></i>Tutorials point</h1> 
+<img src="/image/profile.png" class="mx-auto d-block">
+            <h1><Tutorials point</h1> 
             <p>
                Tutorials Point originated from the idea that there exists a class 
                of readers who respond better to online content and prefer to learn 
