--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <br/>
       
          <div class = "jumbotron bg-dark">
-<img src="/image/profile.png" class="mx-auto d-block">
+<img src="/image/profile.png" class="img-thumbnail">
             <h1><Tutorials point</h1> 
             <p>
                Tutorials Point originated from the idea that there exists a class 
