--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <br/>
       
          <div class = "jumbotron bg-dark">
-<img src="/image/profile.png" class="rounded-circle" style="width:50%" >
+<img src="/image/profile.png" class="mx-auto d-block" style="width:50%" >
             <p>
                Tutorials Point originated from the idea that there exists a class 
                of readers who respond better to online content and prefer to learn 
