--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 </nav>
    <br/>
       <br/>
+<div>
       
          <div class = "jumbotron bg-dark">
 <img src="/image/profile.png" class="mx-auto d-block" style="width:50%" >
@@ -82,5 +83,5 @@
                gives a complete understanding of Java.
             </p>
          </div>
-      
+      </div>
    </body>
