--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </nav>
    <br/>
       <br/>
-<div>
+<div class="container">
       
          <div class = "jumbotron bg-dark">
 <img src="/image/profile.png" class="mx-auto d-block" style="width:50%" >
