--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <body>
      <nav class="navbar navbar-expand-md bg-dark navbar-dark text-green" style="color:#0c0; >
   <!-- Brand -->
-  <a class="navbar-brand" href="#"><b>C.John_</b></a>
+  <a class="navbar-brand" href="#"><img src="/image/logo.png" class="mx-auto d-block" style="width:50%" ></a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
