--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
              background:black;
             color:#0c0;
          }
+img { 
+            filter: drop-shadow(5px 5px 5px #222); 
+            width:200px; 
+            height:220px; 
+        } 
 
 @font-face {
   font-family: myFirstFont;
