--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@ img {
          <div class = "jumbotron bg-dark">
 <img src="/image/profile.png" class="mx-auto d-block" style="width:50%" >
             <p class="typewriter">
-               Tutorials Point originated from the idea that there exists a class 
-               of readers who respond better to online content and prefer to learn 
-               new skills at their own pace from the comforts of their drawing rooms.
-            </p> 
+               Hi! Welcome guys </p> 
          </div>
       
          <div class = "row">
