--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ img {
 .typewriter {
       font-family: monospace; /* Web-safe typewriter-like font */
       overflow: hidden; /* Ensures the content is not revealed until the animation */
-      border-right: .17em solid pink; /* The typewriter cursor */
-      white-space: nowrap; /* Keeps the content on a single line */
+      border-right: .17em solid #0c0; /* The typewriter cursor */
+      white-space: wrap; /* Keeps the content on a single line */
       margin: 0 auto; /* Gives that scrolling effect as the typing happens */
       letter-spacing: .17em; /* Adjust as needed */
       animation: 
@@ -38,7 +38,7 @@ img {
       /* The typewriter cursor effect */
       @keyframes blinking-cursor {
       from, to { border-color: transparent }
-      50% { border-color: pink; }
+      50% { border-color: #0c0; }
       }   
       </style>
    </head>
@@ -74,7 +74,7 @@ img {
          <div class = "jumbotron bg-dark">
 <img src="/image/profile.png" class="mx-auto d-block" style="width:50%" >
             <p class="typewriter">
-               Hi! Welcome guys </p> 
+               Hi! I am C.John Welcome guys </p> 
          </div>
       
          <div class = "row">
