--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ img {
 
 @font-face {
   font-family: myFirstFont;
-  src: url(/font/font1.ttf);
+  src: url(..font/font1.ttf);
 }
 .typewriter {
       font-family: monospace; /* Web-safe typewriter-like font */
       overflow: hidden; /* Ensures the content is not revealed until the animation */
       border-right: .17em solid #0c0; /* The typewriter cursor */
-      white-space: wrap; /* Keeps the content on a single line */
+      white-space: nowrap; /* Keeps the content on a single line */
       margin: 0 auto; /* Gives that scrolling effect as the typing happens */
       letter-spacing: .17em; /* Adjust as needed */
       animation: 
