--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ img {
       
          <div class = "jumbotron bg-dark">
 <img src="/image/profile.png" class="mx-auto d-block" style="width:50%" >
-            <p class="typewriter">
+            <p style"align:center;" class="typewriter">
                Hi! I am C.John Welcome guys </p> 
          </div>
       
