--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@ img {
       margin: 0 auto; /* Gives that scrolling effect as the typing happens */
       letter-spacing: .17em; /* Adjust as needed */
       animation: 
-      typing 3.5s steps(30, end),
+      typing 3.5s steps(auto, end),
       blinking-cursor .5s step-end infinite;
       }
       /* The typing effect */
       @keyframes typing {
       from { width: 0 }
-      to { width: 100% }
+      to { width:auto }
       }
       /* The typewriter cursor effect */
       @keyframes blinking-cursor {
