--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ img {
         } 
 
 @font-face {
-  font-family: myFirstFont;
+  font-family: Special Elite;
   src: url(..font/font1.ttf);
 }
 .typewriter {
