--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ img {
       overflow: hidden; /* Ensures the content is not revealed until the animation */
       border-right: .17em solid #0c0; /* The typewriter cursor */
       white-space: nowrap; /* Keeps the content on a single line */
-      margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+      margin: 0 30; /* Gives that scrolling effect as the typing happens */
       letter-spacing: .17em; /* Adjust as needed */
       animation: 
       typing 3.5s steps(auto, end),
