--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ img {
       /* The typing effect */
       @keyframes typing {
       from { width: 0 }
-      to { width:auto }
+      to { width:100% }
       }
       /* The typewriter cursor effect */
       @keyframes blinking-cursor {
