--- a/index.html
+++ b/index.html
@@ -19,27 +19,20 @@ img {
   font-family: Special Elite;
   src: url(..font/font1.ttf);
 }
-.typewriter {
-      font-family: monospace; /* Web-safe typewriter-like font */
-      overflow: hidden; /* Ensures the content is not revealed until the animation */
-      border-right: .17em solid #0c0; /* The typewriter cursor */
-      white-space: nowrap; /* Keeps the content on a single line */
-      margin: 0 30; /* Gives that scrolling effect as the typing happens */
-      letter-spacing: .17em; /* Adjust as needed */
-      animation: 
-      typing 3.5s steps(auto, end),
-      blinking-cursor .5s step-end infinite;
-      }
-      /* The typing effect */
-      @keyframes typing {
-      from { width: 0 }
-      to { width:100% }
-      }
-      /* The typewriter cursor effect */
-      @keyframes blinking-cursor {
-      from, to { border-color: transparent }
-      50% { border-color: #0c0; }
-      }   
+@-webkit-keyframes typing { from { width: 0; } }
+@-webkit-keyframes blink-caret { 50% { border-color: transparent; } }
+
+tp { 
+	font: bold 300% Consolas, Monaco, monospace;
+	border-right: .1em solid black;
+	width: 16.5em; 
+	width: 21ch;
+	margin: 2em 1em;
+	white-space: nowrap;
+	overflow: hidden;
+	-webkit-animation: typing 2s steps(21, end),
+	           blink-caret .5s step-end infinite alternate;
+}
       </style>
    </head>
    <body>
@@ -73,7 +66,7 @@ img {
       
          <div class = "jumbotron bg-dark">
 <img src="/image/profile.png" class="mx-auto d-block" style="width:50%" >
-            <p style"align:center;" class="typewriter">
+            <p style"align:center;" class="tp">
                Hi! I am C.John Welcome guys </p> 
          </div>
       
