--- a/index.html
+++ b/index.html
@@ -22,17 +22,27 @@ img {
 @-webkit-keyframes typing { from { width: 0; } }
 @-webkit-keyframes blink-caret { 50% { border-color: transparent; } }
 
-tp { 
-	font: bold 300% Consolas, Monaco, monospace;
-	border-right: .1em solid black;
-	width: 16.5em; 
-	width: 21ch;
-	margin: 2em 1em;
-	white-space: nowrap;
-	overflow: hidden;
-	-webkit-animation: typing 2s steps(21, end),
-	           blink-caret .5s step-end infinite alternate;
-}
+tp  {
+      font-family: monospace; /* Web-safe typewriter-like font */
+      overflow: hidden; /* Ensures the content is not revealed until the animation */
+      border-right: .17em solid #0c0; /* The typewriter cursor */
+      white-space: nowrap; /* Keeps the content on a single line */
+      margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+      letter-spacing: .17em; /* Adjust as needed */
+      animation: 
+      typing 3.5s steps(30, end),
+      blinking-cursor .5s step-end infinite;
+      }
+      /* The typing effect */
+      @keyframes typing {
+      from { width: 0 }
+      to { width: 100% }
+      }
+      /* The typewriter cursor effect */
+      @keyframes blinking-cursor {
+      from, to { border-color: transparent }
+      50% { border-color: #0c0; }
+      }   
       </style>
    </head>
    <body>
