--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ img {
 }
 /* DEMO-SPECIFIC STYLES */
 .tp {
-  color: #fff;
+  color: #0c0;
   font-family: monospace;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
+  border-right: .15em solid #0c0; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
@@ -42,7 +42,7 @@ img {
 /* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color: orange }
+  50% { border-color:#0c0 }
 }
       </style>
    </head>
